--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,10 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Processing Outputs and YOLO models
+downloads/
+processed/
+*.webm
+*.json
+*.pt
